# EncoderAppMFC

./: CMakeLists.txt  EncoderApp.sln  README.md
EncoderApp/: EncoderApp.cpp  EncoderApp.h  EncoderApp.rc  EncoderApp.vcxproj  EncoderApp.vcxproj.filters  EncoderAppDlg.cpp  EncoderAppDlg.h  EncoderController.cpp  EncoderController.h  EncoderModel.cpp  EncoderModel.h  resource.h
EncoderApp/res/: EncoderApp.rc2
